--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -1,7 +1,12 @@
 <div class="max-w-md mx-auto">
     <div class="text-center mb-8">
         <svg class="w-16 h-16 mx-auto mb-4 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m0 0a2 2 0 012 2m-2-2a2 2 0 00-2 2m2-2V5a2 2 0 00-2-2H9a2 2 0 00-2 2v2.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M20 4v5h-.581M4.581 9A8.001 8.001 0 0119.419 9M19.419 9H15M4 20v-5h.581M19.419 15a8.003 8.003 0 01-14.838 0M4.581 15H9"
+            />
         </svg>
         <h1 class="text-4xl font-bold text-white">Reset Password</h1>
         <p class="text-gray-400 mt-2">Enter your email and new password to get a reset link</p>
