--- a/views/admin/add-problem.ejs
+++ b/views/admin/add-problem.ejs
@@ -11,6 +11,9 @@
         <button id="load-problem-button" class="text-lg p-2 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none transition-colors duration-200 h-fit">
             Load Problem
         </button>
+        <button id="delete-problem-button" class="text-lg p-2 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none transition-colors duration-200 h-fit">
+            Delete Problem
+        </button>
     </div>
 
     <div class="bg-gray-700 rounded-lg p-6 border border-gray-600">
