--- a/public/admin/add-problem/sun-editor.css
+++ b/public/admin/add-problem/sun-editor.css
@@ -50,6 +50,13 @@
     margin-inline-start: 0rem;
 }
 
+.sun-editor-editable ol {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-left: 2.5rem;
+    margin-inline-start: 0rem;
+}
+
 .sun-editor .se-resizing-bar {
     background-color: #4b5563 !important;
     border-top: 1px solid #6a7282;
