--- a/public/admin/add-problem/sun-editor.css
+++ b/public/admin/add-problem/sun-editor.css
@@ -19,6 +19,70 @@
     background-color: #4b5563;
 }
 
+.se-dialog-content form {
+    background-color: #374151;
+}
+
+.se-dialog-content textarea,
+.sun-editor select {
+    font-family:
+        ui-sans-serif,
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        "Helvetica Neue",
+        Arial,
+        sans-serif;
+    color: white !important;
+    font-weight: 400 !important;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+    background-color: #4b5563;
+}
+
+.sun-editor .se-dialog button,
+.sun-editor .se-dialog span,
+.sun-editor .se-dialog label {
+    font-family:
+        ui-sans-serif,
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        "Helvetica Neue",
+        Arial,
+        sans-serif;
+    color: white !important;
+    font-weight: 400 !important;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+}
+
+.sun-editor .se-dialog a {
+    color: #42a5f5 !important;
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+}
+
+.sun-editor .se-toolbar button,
+.sun-editor .se-toolbar select,
+.sun-editor .se-toolbar .se-btn,
+.sun-editor .se-dropdown {
+    font-family:
+        ui-sans-serif,
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        "Helvetica Neue",
+        Arial,
+        sans-serif;
+}
 .sun-editor-editable {
     font-size: 1.125rem;
     line-height: 1.5rem;
