--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -34,7 +34,7 @@
             <h4 class="font-bold text-white text-lg mb-2">SAMPLE OUTPUT:</h4>
             <div class="font-mono text-gray-200">
                 <% for (const line of problem.outputTestcases[i].split("\n")) { %>
-                    <div><%= line %></div>
+                    <div class="whitespace-pre"><%= line %></div>
                 <% } %>
             </div>
         </div>
